--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.main.banner-mode=off
+server.port=${PORT: 9090}
+spring.main.allow-bean-definition-overriding=true
+
+#spring.profiles.active = dev
